@@ -1,15 +1,14 @@
 package com.example.demo.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ValidationUtil {
-    private static final List<String> VALID_SEASONS = List.of("Kharif", "Rabi", "Summer");
+
+    private static final List<String> SEASONS =
+            Arrays.asList("Kharif", "Rabi", "Summer");
 
     public static boolean validSeason(String season) {
-        return VALID_SEASONS.contains(season);
-    }
-
-    public static boolean validNPK(String npk) {
-        return npk.matches("\\d+-\\d+-\\d+");
+        return SEASONS.contains(season);
     }
 }
